# USD_AssetResolver

./: CMakeLists.txt  README.md  SimpleMapResolver.cpp  SimpleMapResolver.h  config-example.json  plugInfo.json
builds/H21.0.466/: build.txt  plugInfo.json  simple_resolver.json
